confirm password added

--- a/auth.html
+++ b/auth.html
@@ -12,7 +12,16 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link active" href="#">Login/SignUp</a>
+      </div>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" href="./login.html">Login <span class="sr-only">(current)</span></a>
+      </div>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" href="./auth.html">SignUp <span class="sr-only">(current)</span></a>
       </div>
     </div>
   </nav>
@@ -34,6 +43,10 @@
           <div class="form-group">
             <label for="userPassword">Password</label>
             <input type="password" class="form-control" id="userPassword">
+          </div>
+          <div class="form-group">
+            <label for="userPassword">Confirm Password</label>
+            <input type="password" class="form-control" id="userCPassword">
           </div>
           <hr/>
           <div class="form-group text-right">
