--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" href="./">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="./auth.html">Login/SignUp</a>
+        <a class="nav-link active" href="./index.html">Home <span class="sr-only">(current)</span></a>
+      </div>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" href="./login.html">Login <span class="sr-only">(current)</span></a>
+      </div>
+    </div>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" href="./auth.html">SignUp <span class="sr-only">(current)</span></a>
       </div>
     </div>
   </nav>
